# dx-project

./: .gitattributes  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md
src/: main.rs
