[package]
name = "dx-project"
version = "0.1.0"
authors = ["Chris Wong <chris.wong.ksl@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["fullstack"] }
serde = { version = "1.0", features = ["derive"] }
gloo-storage = "0.3"
chrono = "0.4.44"
reqwest = { version = "0.13.2", features = ["json", "native-tls", "query"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
